2005-03-09  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/EventHandler/check.java: Added new
	tests and try-catch-blocks for known problems.
	* gnu/testlet/java/beans/EventHandler/check14.java: Added
	new tests.
	
2005-03-08  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/io/BufferedInputStream/MarkReset.java (marktest):
	Two testcases added for PR libgcj/20389.

2005-03-08  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/EventHandler/check.java: New test.
	* gnu/testlet/java/beans/EventHandler/check14.java: Added
	new test.

2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Font/serialization.java: New test.
	
2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/StringTokenizer/constructors.java: New tests.
	* gnu/testlet/java/util/StringTokenizer/countTokens.java: Likewise.
	* gnu/testlet/java/util/StringTokenizer/hasMoreElements.java: Likewise.
	* gnu/testlet/java/util/StringTokenizer/hasMoreTokens.java: Likewise.
	* gnu/testlet/java/util/StringTokenizer/nextElement.java: Likewise.
	* gnu/testlet/java/util/StringTokenizer/nextToken.java: Additional 
	tests.
	
2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Font/decode.java: New tests.
	* gnu/testlet/java/util/StringTokenizer/nextToken.java: New tests.
	
2005-03-03  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/io/DataInputStream/readLine.java:
	Restructured and added more tests.

2005-03-03  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/InheritableThreadLocal/simple.java: New test.

2005-03-02  Daniel Bonniot  <bonniot@users.sf.net>

	* gnu/testlet/java/io/Serializable/ParentReadResolve.java: New test.
	* gnu/testlet/java/io/Serializable/ParentWriteReplace.java: New test.

2005-03-01  Ito Kazumitsu  <kaz@maczuka.gcd.org>

    * gnu/testlet/java/text/DecimalFormat/parse.java: New test cases.
